<resources>
    <string name="app_name">ChromeSearchEngineer</string>
    <string name="chrome_package_loadtask_title">searching</string>
    <string name="chrome_package_loadtask_message">searching the package of chrome...</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="choose_chrome_dialog_title">choose a Chrome</string>

    <string name="google_default_search_engineer_toast">It\'s the default search engineer of Google,do not modify!</string>
    <string name="modify_enter_null_error">input error,not null</string>
    <string name="modify_activity_check_dialog_no">no</string>
    <string name="modify_activity_check_dialog_ok">write</string>
    <string name="modify_activity_check_dialog_title">recheck</string>
    <string name="modify_activity_title_create">create</string>
    <string name="modify_activity_check_dialog_message">save and write your changing?</string>
    <string name="modify_summary_input_encodings">the encoding of search content(UTF-8 usually,can be empty)</string>
    <string name="modify_summary_keyword">the keyword of the search engineer domin</string>
    <string name="modify_summary_name">the name of the searsh engineer to display</string>
    <string name="modify_summary_prepopulate_id">the order of Chrome display,it must be integer and unique,0  will not display.</string>
    <string name="modify_summary_show_in_default_list">whether display at Chrome</string>
    <string name="modify_summary_url">the url of search engineer(please replace the search content with {searchTerms},for example:https://www.google.com/#q={searchTerms})</string>
    <string name="ok">ok</string>
    <string name="donate_alipay_text">donate</string>
    <string name="donate_alipay_openAlipay">open Alipay</string>
    <string name="donate_alipay_count"></string>
    <string name="donate_alipay_dialogTV"></string>
    <string name="about">help</string>
    <string name="about_content">after data has changing,please force stop Chrome before opening it.\\nif this app has some data errors,please force kill it and restart it.</string>
    <string name="share_dialog_title">share</string>
    <string name="share_dialog_message" formatted="false">name:%s\nkey_words:%s\nurl:%s\ninput_encodings:%s</string>
    <string name="share_progress_message">Sending engineer...</string>
    <string name="share_result_error">Internet error</string>
    <string name="share_result_success">Share successfully</string>
    <string name="delete_dialog_title">delete</string>

</resources>
